--- a/pages/18070.html
+++ b/pages/18070.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9198/#Item_39" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9198/#Item_40" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1021,7 +1021,7 @@ margin-left: 0em;
 <p>with the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>d</mi></mrow><annotation encoding="application/x-tex">d</annotation></semantics></math>-fold <a class="existingWikiWord" href="/nlab/show/loop+space">loop space</a> of the <a class="existingWikiWord" href="/nlab/show/n-sphere">(d+k)-sphere</a>.</p>
 </div>
 
-<p>(<a href="#Segal73">Segal 73, Theorem 3</a>)</p>
+<p>(<a href="#May72">May 72, Theorem 2.7</a>, <a href="#Segal73">Segal 73, Theorem 3</a>)</p>
 
 <div class="num_prop" id="StableSplittingOfMappingSpacesOutOfEuclideanSpace">
 <h6 id="proposition_2">Proposition</h6>
@@ -1166,7 +1166,7 @@ margin-left: 0em;
 
 <ul>
 <li id="May72">
-<p><a class="existingWikiWord" href="/nlab/show/Peter+May">Peter May</a>, <em>The geometry of iterated loop spaces</em>, Springer 1972</p>
+<p><a class="existingWikiWord" href="/nlab/show/Peter+May">Peter May</a>, <em>The geometry of iterated loop spaces</em>, Springer 1972 (<a href="https://www.math.uchicago.edu/~may/BOOKS/geom_iter.pdf">pdf</a>)</p>
 </li>
 
 <li id="Segal73">
@@ -1321,14 +1321,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  9, 2018 at 06:25:50.
+  Last revised on November 16, 2018 at 08:59:45.
   See the <a href="https://ncatlab.org/nlab/history/configuration space of points" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/configuration+space+of+points" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+of+points/31" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(31 revisions)</span> | <a href="/nlab/show/diff/configuration+space+of+points" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+of+points" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/configuration+space+of+points" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+of+points/32" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(32 revisions)</span> | <a href="/nlab/show/diff/configuration+space+of+points" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+of+points" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/configuration space of points/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
