--- a/pages/19886.html
+++ b/pages/19886.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -759,7 +759,7 @@ margin-left: 0em;
 <p>with the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>d</mi></mrow><annotation encoding="application/x-tex">d</annotation></semantics></math>-fold <a class="existingWikiWord" href="/nlab/show/loop+space">loop space</a> of the <a class="existingWikiWord" href="/nlab/show/n-sphere">(d+k)-sphere</a>.</p>
 </div>
 
-<p>(<a href="#Segal73">Segal 73, Theorem 3</a>)</p>
+<p>(<a href="#May72">May 72, Theorem 2.7</a>, <a href="#Segal73">Segal 73, Theorem 3</a>)</p>
 
 <h3 id="StableSplittings">Stable splitting of mapping spaces</h3>
 
@@ -1011,7 +1011,13 @@ margin-left: 0em;
 <p>using the homotopy equivalence before stabilization due to</p>
 
 <ul>
-<li id="Segal73"><a class="existingWikiWord" href="/nlab/show/Graeme+Segal">Graeme Segal</a>, <em>Configuration-spaces and iterated loop-spaces</em>, Invent. Math. <strong>21</strong> (1973), 213–221. MR 0331377 (<a href="http://dodo.pdmi.ras.ru/~topology/books/segal.pdf">pdf</a>)</li>
+<li id="May72">
+<p><a class="existingWikiWord" href="/nlab/show/Peter+May">Peter May</a>, <em>The geometry of iterated loop spaces</em>, Springer 1972 (<a href="https://www.math.uchicago.edu/~may/BOOKS/geom_iter.pdf">pdf</a>)</p>
+</li>
+
+<li id="Segal73">
+<p><a class="existingWikiWord" href="/nlab/show/Graeme+Segal">Graeme Segal</a>, <em>Configuration-spaces and iterated loop-spaces</em>, Invent. Math. <strong>21</strong> (1973), 213–221. MR 0331377 (<a href="http://dodo.pdmi.ras.ru/~topology/books/segal.pdf">pdf</a>)</p>
+</li>
 </ul>
 
 <p>An alternative proof is due to</p>
@@ -1047,14 +1053,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 16, 2018 at 05:29:23.
+  Last revised on November 16, 2018 at 08:58:29.
   See the <a href="https://ncatlab.org/nlab/history/stable splitting of mapping spaces" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/stable+splitting+of+mapping+spaces" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+splitting+of+mapping+spaces/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/stable+splitting+of+mapping+spaces" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+splitting+of+mapping+spaces" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/stable+splitting+of+mapping+spaces" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+splitting+of+mapping+spaces/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/stable+splitting+of+mapping+spaces" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+splitting+of+mapping+spaces" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/stable splitting of mapping spaces/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
