--- a/pages/18905.html
+++ b/pages/18905.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9250/#Item_6" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9250/#Item_7" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1078,7 +1078,17 @@ margin-left: 0em;
 <p>The perturbative expansion of thermal field theory around the infinite-temperature-limit (i.e. around <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi><mo>=</mo><mn>1</mn><mo stretchy="false">/</mo><mi>T</mi><mo>=</mo><mn>0</mn></mrow><annotation encoding="application/x-tex">\beta = 1/T = 0</annotation></semantics></math>) is discussed in</p>
 
 <ul>
-<li id="Jourjine84">Alexander N Jourjine, <em>Quantum field theory in the infinite temperature limit</em>, Annals of Physics Volume 155, Issue 2, July 1984, Pages 305-332 (<a href="https://doi.org/10.1016/0003-4916(84)90003-4">doi:10.1016/0003-4916(84)90003-4</a>)</li>
+<li id="Jourjine84">
+<p>Alexander N Jourjine, <em>Quantum field theory in the infinite temperature limit</em>, Annals of Physics Volume 155, Issue 2, July 1984, Pages 305-332 (<a href="https://doi.org/10.1016/0003-4916(84)90003-4">doi:10.1016/0003-4916(84)90003-4</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Klaas+Landsman">Klaas Landsman</a>, <em>Limitations to dimensional reduction at high temperature</em>, Nuclear Physics B Volume 322, Issue 2, 14 August 1989, Pages 498-530 (<a href="https://doi.org/10.1016/0550-3213(89)90424-0">doi:10.1016/0550-3213(89)90424-0</a>)</p>
+</li>
+
+<li>
+<p>T. Reisz, <em>Realization of dimensional reduction at high temperature</em>, Z. Phys. C - Particles and Fields (1992) 53: 169 (<a href="https://doi.org/10.1007/BF01483886">doi:10.1007/BF01483886</a>)</p>
+</li>
 </ul>
 
 <p>See also</p>
@@ -1102,7 +1112,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 16, 2018 at 09:36:41.
+  Last revised on November 16, 2018 at 10:05:56.
   See the <a href="https://ncatlab.org/nlab/history/Euclidean field theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
