--- a/pages/6807.html
+++ b/pages/6807.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8950/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8950/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -564,6 +564,7 @@ margin-left: 0em;
 <ul>
 <li><a href='#general'>General</a></li>
 <li><a href='#relation_to_supermembranes'>Relation to super-membranes</a></li>
+<li><a href='#ground_state_problem'>Ground state problem</a></li>
 <li><a href='#graviton_scattering'>Graviton scattering</a></li>
 <li><a href='#black_holes'>Black holes</a></li>
 </ul>
@@ -688,6 +689,16 @@ margin-left: 0em;
 </li>
 </ul>
 
+<h3 id="ground_state_problem">Ground state problem</h3>
+
+<p>There remains the problem of existence of a sensible ground state of the BFSS model.</p>
+
+<p>For a new attempt and pointers to previous attempts see</p>
+
+<ul>
+<li>L. Boulton, M.P. Garcia del Moral, A. Restuccia, <em>The ground state of the D=11 supermembrane and matrix models on compact regions</em>, Nuclear Physics B Volume 910, September 2016, Pages 665-684 (<a href="https://arxiv.org/abs/1504.04071">arXiv:1504.04071</a>)</li>
+</ul>
+
 <h3 id="graviton_scattering">Graviton scattering</h3>
 
 <p>Computation of <a class="existingWikiWord" href="/nlab/show/graviton">graviton</a> <a class="existingWikiWord" href="/nlab/show/scattering+amplitudes">scattering amplitudes</a>:</p>
@@ -757,14 +768,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 11, 2018 at 08:51:05.
+  Last revised on November 16, 2018 at 11:16:42.
   See the <a href="https://ncatlab.org/nlab/history/BFSS matrix model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/BFSS+matrix+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/BFSS+matrix+model/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/BFSS+matrix+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/BFSS+matrix+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/BFSS+matrix+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/BFSS+matrix+model/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/BFSS+matrix+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/BFSS+matrix+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/BFSS matrix model/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
