--- a/pages/10234.html
+++ b/pages/10234.html
@@ -1031,9 +1031,9 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>A <em>proton</em> is a <a class="existingWikiWord" href="/nlab/show/bound+state">bound state</a> of three <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a>, hence a <a class="existingWikiWord" href="/nlab/show/baryon">baryon</a>.</p>
+<p>A <em>proton</em> is a certain <a class="existingWikiWord" href="/nlab/show/bound+state">bound state</a> of three <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a>, hence a <a class="existingWikiWord" href="/nlab/show/baryon">baryon</a>.</p>
 
-<p>The bound states of <a class="existingWikiWord" href="/nlab/show/protons">protons</a> and <a class="existingWikiWord" href="/nlab/show/neutrons">neutrons</a> are called <a class="existingWikiWord" href="/nlab/show/nucleus+%28physics%29">nuclei</a>, the core of <a class="existingWikiWord" href="/nlab/show/atoms">atoms</a>. The proton alone is the nucleus of the <a class="existingWikiWord" href="/nlab/show/hydrogen+atom">hydrogen atom</a>.</p>
+<p>The <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> of <a class="existingWikiWord" href="/nlab/show/protons">protons</a> and <a class="existingWikiWord" href="/nlab/show/neutrons">neutrons</a> (jointly: <a class="existingWikiWord" href="/nlab/show/nucleons">nucleons</a>) in turn are <a class="existingWikiWord" href="/nlab/show/nucleus+%28physics%29">nuclei</a>, the cores of <a class="existingWikiWord" href="/nlab/show/atoms">atoms</a>. The proton alone is the nucleus of the <a class="existingWikiWord" href="/nlab/show/hydrogen+atom">hydrogen atom</a>.</p>
 
 <p>In the <a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a> the proton is stable, and <a class="existingWikiWord" href="/nlab/show/experiment">experiment</a> highly constrains possible rare <a class="existingWikiWord" href="/nlab/show/proton+decay">proton decay</a> (see there). But some <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">models</a> beyond the standard model (notably many, but not all, <a class="existingWikiWord" href="/nlab/show/GUT">GUT</a> <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">models</a>) do imply rare <a class="existingWikiWord" href="/nlab/show/proton+decay">proton decay</a>.</p>
 
@@ -1200,14 +1200,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 11, 2018 at 10:00:47.
+  Last revised on November 17, 2018 at 02:55:23.
   See the <a href="https://ncatlab.org/nlab/history/proton" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/proton" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/proton/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/proton" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/proton" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/proton" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/proton/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/proton" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/proton" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/proton/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
