--- a/pages/18475.html
+++ b/pages/18475.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -919,16 +919,16 @@ margin-left: 0em;
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Sachdev-Ye-Kitaev+model">Sachdev-Ye-Kitaev model</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Sachdev-Ye-Kitaev+model">Sachdev-Ye-Kitaev model</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/quark-gluon+plasma">quark-gluon plasma</a></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
-
-<p>Application of AdS-CFT in <a class="existingWikiWord" href="/nlab/show/condensed+matter+physics">condensed matter physics</a> goes back to</p>
-
-<ul>
-<li><a class="existingWikiWord" href="/nlab/show/Giuseppe+Policastro">Giuseppe Policastro</a>, D.T. Son, A.O. Starinets, <em>Shear viscosity of strongly coupled N=4 supersymmetric Yang-Mills plasma</em>, Phys. Rev. Lett.87:081601, 2001 (<a href="http://arxiv.org/abs/hep-th/0104066">arXiv:hep-th/0104066</a>)</li>
-</ul>
 
 <p>A comprehensive textbook account is in</p>
 
@@ -965,14 +965,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 16, 2018 at 03:31:29.
+  Last revised on November 17, 2018 at 02:46:26.
   See the <a href="https://ncatlab.org/nlab/history/AdS-CFT in condensed matter physics" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/AdS-CFT+in+condensed+matter+physics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AdS-CFT+in+condensed+matter+physics/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/AdS-CFT+in+condensed+matter+physics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AdS-CFT+in+condensed+matter+physics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/AdS-CFT+in+condensed+matter+physics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AdS-CFT+in+condensed+matter+physics/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/AdS-CFT+in+condensed+matter+physics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AdS-CFT+in+condensed+matter+physics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/AdS-CFT in condensed matter physics/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
