--- a/pages/4442.html
+++ b/pages/4442.html
@@ -1047,6 +1047,7 @@ margin-left: 0em;
 <li><a href='#Appications'>Applications</a></li>
 <ul>
 <li><a href='#to_gravity'>To gravity</a></li>
+<li><a href='#to_the_quarkgluon_plasma'>To the quark-gluon plasma</a></li>
 <li><a href='#to_particle_physics'>To particle physics</a></li>
 <li><a href='#ToCondensedMatterPhysics'>To condensed matter physics</a></li>
 </ul>
@@ -1612,6 +1613,14 @@ margin-left: 0em;
 <p>The <a class="existingWikiWord" href="/nlab/show/SYK+model">SYK model</a> gives us a glimpse into the interior of an <a class="existingWikiWord" href="/nlab/show/extremal+black+hole">extremal black hole</a>…That’s the feature of SYK that I find most interesting…It is a feature this model has, that I think no other model has</p>
 </blockquote>
 
+<h4 id="to_the_quarkgluon_plasma">To the quark-gluon plasma</h4>
+
+<p>Applications of AdS-CFT to the <a class="existingWikiWord" href="/nlab/show/quark-gluon+plasma">quark-gluon plasma</a> of <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> goes back to holographic computation of <span class="newWikiWord">shear viscosity<a href="/nlab/new/shear+viscosity">?</a></span> in</p>
+
+<ul>
+<li id="PolicastroSonStarinets01"><a class="existingWikiWord" href="/nlab/show/Giuseppe+Policastro">Giuseppe Policastro</a>, D.T. Son, A.O. Starinets, <em>Shear viscosity of strongly coupled N=4 supersymmetric Yang-Mills plasma</em>, Phys. Rev. Lett.87:081601, 2001 (<a href="http://arxiv.org/abs/hep-th/0104066">arXiv:hep-th/0104066</a>)</li>
+</ul>
+
 <h4 id="to_particle_physics">To particle physics</h4>
 
 <ul>
@@ -1620,13 +1629,9 @@ margin-left: 0em;
 
 <h4 id="ToCondensedMatterPhysics">To condensed matter physics</h4>
 
-<p>Application of <a class="existingWikiWord" href="/nlab/show/AdS-CFT+in+condensed+matter+physics">AdS-CFT in condensed matter physics</a> goes back to</p>
+<p>On <a class="existingWikiWord" href="/nlab/show/AdS-CFT+in+condensed+matter+physics">AdS-CFT in condensed matter physics</a>:</p>
 
-<ul>
-<li id="PolicastroSonStarinets01"><a class="existingWikiWord" href="/nlab/show/Giuseppe+Policastro">Giuseppe Policastro</a>, D.T. Son, A.O. Starinets, <em>Shear viscosity of strongly coupled N=4 supersymmetric Yang-Mills plasma</em>, Phys. Rev. Lett.87:081601, 2001 (<a href="http://arxiv.org/abs/hep-th/0104066">arXiv:hep-th/0104066</a>)</li>
-</ul>
-
-<p>A comprehensive textbook account is in</p>
+<p>Textbook account</p>
 
 <ul>
 <li id="HartnollLucasSachdev16">Sean A. Hartnoll, Andrew Lucas, <a class="existingWikiWord" href="/nlab/show/Subir+Sachdev">Subir Sachdev</a>, <em>Holographic quantum matter</em>, MIT Press 2018 (<a href="https://arxiv.org/abs/1612.07324">arXiv:1612.07324</a>, <a href="https://mitpress.ublish.com/book/holographic-quantum-matter">publisher</a>)</li>
@@ -1661,14 +1666,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 16, 2018 at 04:50:54.
+  Last revised on November 17, 2018 at 02:48:24.
   See the <a href="https://ncatlab.org/nlab/history/AdS-CFT" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/AdS-CFT" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AdS-CFT/69" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(69 revisions)</span> | <a href="/nlab/show/diff/AdS-CFT" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AdS-CFT" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/AdS-CFT" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AdS-CFT/70" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(70 revisions)</span> | <a href="/nlab/show/diff/AdS-CFT" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AdS-CFT" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/AdS-CFT/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
