--- a/pages/8209.html
+++ b/pages/8209.html
@@ -979,7 +979,7 @@ margin-left: 0em;
 </li>
 
 <li id="BiagazziCotrone12">
-<p>Francesco Biagazzi, A. l. Cotrone, <em>Holography and the quark-gluon plasma</em>, AIP Conference Proceedings 1492, 307 (2012) (<a href="https://doi.org/10.1063/1.4763537">doi:10.1063/1.4763537</a>, <a href="http://cp3-origins.dk/content/movies/2013-01-14-bigazzi.pdf">slides pdf</a>)</p>
+<p>Francesco Biagazzi, A. Cotrone, <em>Holography and the quark-gluon plasma</em>, AIP Conference Proceedings 1492, 307 (2012) (<a href="https://doi.org/10.1063/1.4763537">doi:10.1063/1.4763537</a>, <a href="http://cp3-origins.dk/content/movies/2013-01-14-bigazzi.pdf">slides pdf</a>)</p>
 </li>
 
 <li id="Brambilla14">
@@ -1010,14 +1010,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 17, 2018 at 05:52:56.
+  Last revised on November 17, 2018 at 06:44:17.
   See the <a href="https://ncatlab.org/nlab/history/quark-gluon plasma" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quark-gluon+plasma" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quark-gluon+plasma/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/quark-gluon+plasma" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quark-gluon+plasma" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quark-gluon+plasma" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quark-gluon+plasma/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/quark-gluon+plasma" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quark-gluon+plasma" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/quark-gluon plasma/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
